--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-id-swiper": "^2.3.0",
+    "react-scripts": "3.0.1",
+    "swiper": "^4.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,5 +29,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "author": "Phuc Nguyen Hoang<phucnguyenhoang1985@gmail.com>",
+  "license": "MIT"
 }
